src/Ejemplo01Sintaxis.java
/* Generated By:JavaCC: Do not edit this line. Ejemplo01Sintaxis.java */
public class Ejemplo01Sintaxis implements Ejemplo01SintaxisConstants {
    public static void main(String[] args) {
        try {
            new Ejemplo01Sintaxis(new java.io.StringReader(args[0])).S();
            System.out.println("La sintaxis es CORRECTA" );
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.out.println("Hay un ERROR en la sintaxis 2: " + e.getMessage());
        }
    }

/* Reglas Sintactivas */
  static final public void S() throws ParseException {
    Elemento();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      jj_consume_token(11);
      Elemento();
    }
  }

  static final public void Elemento() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ARTICLE:
      Article();
      break;
    case BOOK:
      Book();
      break;
    case BOOKLET:
      Booklet();
      break;
    case CONFERENCE:
      Conference();
      break;
    case INBOOK:
      Inbook();
      break;
    case INCOLLECTION:
      Incollection();
      break;
    case INPROCEEDINGS:
      Inproceedings();
      break;
    case MANUAL:
      Manual();
      break;
    case MASTERSTHESIS:
      Mastersthesis();
      break;
    case MISC:
      Misc();
      break;
    case PHDTHESIS:
      Phdthesis();
      break;
    case PROCEEDINGS:
      Proceedings();
      break;
    case TECHREPORT:
      Techreport();
      break;
    case UNPUBLISHED:
      Unpublished();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Article() throws ParseException {
    jj_consume_token(ARTICLE);
    jj_consume_token(9);
    SentenciaArticle();
    jj_consume_token(10);
  }

  static final public void Book() throws ParseException {
    jj_consume_token(BOOK);
    jj_consume_token(9);
    SentenciaBook();
    jj_consume_token(10);
  }

  static final public void Booklet() throws ParseException {
    jj_consume_token(BOOKLET);
    jj_consume_token(9);
    SentenciaBooklet();
    jj_consume_token(10);
  }

  static final public void Conference() throws ParseException {
    jj_consume_token(CONFERENCE);
    jj_consume_token(9);
    SentenciaConference();
    jj_consume_token(10);
  }

  static final public void Inbook() throws ParseException {
    jj_consume_token(INBOOK);
    jj_consume_token(9);
    SentenciaInbook();
    jj_consume_token(10);
  }

  static final public void Incollection() throws ParseException {
    jj_consume_token(INCOLLECTION);
    jj_consume_token(9);
    SentenciaIncollection();
    jj_consume_token(10);
  }

  static final public void Inproceedings() throws ParseException {
    jj_consume_token(INPROCEEDINGS);
    jj_consume_token(9);
    SentenciaInproceedings();
    jj_consume_token(10);
  }

  static final public void Manual() throws ParseException {
    jj_consume_token(MANUAL);
    jj_consume_token(9);
    SentenciaManual();
    jj_consume_token(10);
  }

  static final public void Mastersthesis() throws ParseException {
    jj_consume_token(MASTERSTHESIS);
    jj_consume_token(9);
    SentenciaMastersthesis();
    jj_consume_token(10);
  }

  static final public void Misc() throws ParseException {
    jj_consume_token(MISC);
    jj_consume_token(9);
    SentenciaMisc();
    jj_consume_token(10);
  }

  static final public void Phdthesis() throws ParseException {
    jj_consume_token(PHDTHESIS);
    jj_consume_token(9);
    SentenciaPhdthesis();
    jj_consume_token(10);
  }

  static final public void Proceedings() throws ParseException {
    jj_consume_token(PROCEEDINGS);
    jj_consume_token(9);
    SentenciaProceedings();
    jj_consume_token(10);
  }

  static final public void Techreport() throws ParseException {
    jj_consume_token(TECHREPORT);
    jj_consume_token(9);
    SentenciaTechreport();
    jj_consume_token(10);
  }

  static final public void Unpublished() throws ParseException {
    jj_consume_token(UNPUBLISHED);
    jj_consume_token(9);
    SentenciaUnpublished();
    jj_consume_token(10);
  }

  static final public void SentenciaArticle() throws ParseException {
    AtributoArticle();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(11);
      AtributoArticle();
    }
  }

  static final public void AtributoArticle() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case JOURNAL:
      Journal();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaBook() throws ParseException {
    AtributoBook();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(11);
      AtributoBook();
    }
  }

  static final public void AtributoBook() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case EDITOR:
      Editor();
      break;
    case TITLE:
      Title();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case SERIES:
      Series();
      break;
    case JOURNAL:
      Journal();
      break;
    case EDITION:
      Edition();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    case ADDRESS:
      Address();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaBooklet() throws ParseException {
    AtributoBooklet();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      jj_consume_token(11);
      AtributoBooklet();
    }
  }

  static final public void AtributoBooklet() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case HOWPUBLISHED:
      Howpublished();
      break;
    case ADDRESS:
      Address();
      break;
    case YEAR:
      Year();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaConference() throws ParseException {
    AtributoConference();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      jj_consume_token(11);
      AtributoConference();
    }
  }

  static final public void AtributoConference() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case YEAR:
      Year();
      break;
    case BOOKTITTLE:
      Booktittle();
      break;
    case EDITOR:
      Editor();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case SERIES:
      Series();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case ADDRESS:
      Address();
      break;
    case ORGANIZATION:
      Organization();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaInbook() throws ParseException {
    AtributoInbook();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      jj_consume_token(11);
      AtributoInbook();
    }
  }

  static final public void AtributoInbook() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case JOURNAL:
      Journal();
      break;
    case EDITOR:
      Editor();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case ADDRESS:
      Address();
      break;
    case CHAPTER:
      Chapter();
      break;
    case EDITION:
      Edition();
      break;
    case SERIES:
      Series();
      break;
    case TYPE:
      Type();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaIncollection() throws ParseException {
    AtributoIncollection();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_7;
      }
      jj_consume_token(11);
      AtributoIncollection();
    }
  }

  static final public void AtributoIncollection() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case JOURNAL:
      Journal();
      break;
    case BOOKTITTLE:
      Booktittle();
      break;
    case EDITOR:
      Editor();
      break;
    case TYPE:
      Type();
      break;
    case CHAPTER:
      Chapter();
      break;
    case ADDRESS:
      Address();
      break;
    case EDITION:
      Edition();
      break;
    case SERIES:
      Series();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaInproceedings() throws ParseException {
    AtributoInproceedings();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_8;
      }
      jj_consume_token(11);
      AtributoInproceedings();
    }
  }

  static final public void AtributoInproceedings() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case BOOKTITTLE:
      Booktittle();
      break;
    case EDITOR:
      Editor();
      break;
    case ADDRESS:
      Address();
      break;
    case SERIES:
      Series();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case ORGANIZATION:
      Organization();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaManual() throws ParseException {
    AtributoManual();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_9;
      }
      jj_consume_token(11);
      AtributoManual();
    }
  }

  static final public void AtributoManual() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case ORGANIZATION:
      Organization();
      break;
    case ADDRESS:
      Address();
      break;
    case YEAR:
      Year();
      break;
    case EDITION:
      Edition();
      break;
    case NUMBER:
      Number();
      break;
    case PAGES:
      Pages();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaMastersthesis() throws ParseException {
    AtributoMastersthesis();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_10;
      }
      jj_consume_token(11);
      AtributoMastersthesis();
    }
  }

  static final public void AtributoMastersthesis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case ADDRESS:
      Address();
      break;
    case SCHOOL:
      School();
      break;
    case TYPE:
      Type();
      break;
    case YEAR:
      Year();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaMisc() throws ParseException {
    AtributoMisc();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_11;
      }
      jj_consume_token(11);
      AtributoMisc();
    }
  }

  static final public void AtributoMisc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case HOWPUBLISHED:
      Howpublished();
      break;
    case YEAR:
      Year();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaPhdthesis() throws ParseException {
    AtributoPhdthesis();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_12;
      }
      jj_consume_token(11);
      AtributoPhdthesis();
    }
  }

  static final public void AtributoPhdthesis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case SCHOOL:
      School();
      break;
    case TYPE:
      Type();
      break;
    case ADDRESS:
      Address();
      break;
    case YEAR:
      Year();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaProceedings() throws ParseException {
    AtributoProceedings();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_13;
      }
      jj_consume_token(11);
      AtributoProceedings();
    }
  }

  static final public void AtributoProceedings() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case EDITOR:
      Editor();
      break;
    case BOOKTITTLE:
      Booktittle();
      break;
    case SERIES:
      Series();
      break;
    case ADDRESS:
      Address();
      break;
    case PUBLISHER:
      Publisher();
      break;
    case ORGANIZATION:
      Organization();
      break;
    case YEAR:
      Year();
      break;
    case VOLUME:
      Volume();
      break;
    case NUMBER:
      Number();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaTechreport() throws ParseException {
    AtributoTechreport();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_14;
      }
      jj_consume_token(11);
      AtributoTechreport();
    }
  }

  static final public void AtributoTechreport() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case TITLE:
      Title();
      break;
    case YEAR:
      Year();
      break;
    case TYPE:
      Type();
      break;
    case INSTITUTION:
      Institution();
      break;
    case ADDRESS:
      Address();
      break;
    case NUMBER:
      Number();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SentenciaUnpublished() throws ParseException {
    AtributoUnpublished();
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 11:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_15;
      }
      jj_consume_token(11);
      AtributoUnpublished();
    }
  }

  static final public void AtributoUnpublished() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ETIQUETA:
      Etiqueta();
      break;
    case AUTHOR:
      Author();
      break;
    case NOTE:
      Note();
      break;
    case TITLE:
      Title();
      break;
    case YEAR:
      Year();
      break;
    case MONTH:
      Month();
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Etiqueta() throws ParseException {
    jj_consume_token(ETIQUETA);
  }

  static final public void Author() throws ParseException {
    jj_consume_token(AUTHOR);
  }

  static final public void Editor() throws ParseException {
    jj_consume_token(EDITOR);
  }

  static final public void Title() throws ParseException {
    jj_consume_token(TITLE);
  }

  static final public void Publisher() throws ParseException {
    jj_consume_token(PUBLISHER);
  }

  static final public void Journal() throws ParseException {
    jj_consume_token(JOURNAL);
  }

  static final public void Year() throws ParseException {
    jj_consume_token(YEAR);
  }

  static final public void Volume() throws ParseException {
    jj_consume_token(VOLUME);
  }

  static final public void Number() throws ParseException {
    jj_consume_token(NUMBER);
  }

  static final public void Pages() throws ParseException {
    jj_consume_token(PAGES);
  }

  static final public void Month() throws ParseException {
    jj_consume_token(MONTH);
  }

  static final public void Series() throws ParseException {
    jj_consume_token(SERIES);
  }

  static final public void Address() throws ParseException {
    jj_consume_token(ADDRESS);
  }

  static final public void Edition() throws ParseException {
    jj_consume_token(EDITION);
  }

  static final public void Howpublished() throws ParseException {
    jj_consume_token(HOWPUBLISHED);
  }

  static final public void Booktittle() throws ParseException {
    jj_consume_token(BOOKTITTLE);
  }

  static final public void Organization() throws ParseException {
    jj_consume_token(ORGANIZATION);
  }

  static final public void Type() throws ParseException {
    jj_consume_token(TYPE);
  }

  static final public void Chapter() throws ParseException {
    jj_consume_token(CHAPTER);
  }

  static final public void School() throws ParseException {
    jj_consume_token(SCHOOL);
  }

  static final public void Institution() throws ParseException {
    jj_consume_token(INSTITUTION);
  }

  static final public void Note() throws ParseException {
    jj_consume_token(NOTE);
  }
